# py_preference

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
py_preference/: elicitor.py  preference.py  priors.py
py_preference/tests/: conftest.py  elicitor_test.py  hello_world_test.py  preference_test.py
src/py_preference/: __init__.py
