[project]
name = "py-preference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "John Lepird", email = "jack.lepird@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.30.0",
    "scipy>=1.15.3",
]
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
