[project]
name = "py-preference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "John Lepird", email = "jack.lepird@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.30.0",
    "scipy>=1.15.3",
]
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "py_preference/tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
]

[tool.ruff.lint]
select = [
    "F",
    "N",
    "ARG",
    "TC",
    "LOG",
    "ANN",
]

fixable = ["ALL"]